# src/routes/post_upload_file.rs
@@ -1,9 +1,10 @@
+use crate::errors::FileUploadError;
+use crate::routes::response::ErrorResponse;
 use crate::services::FileUploader;
 use actix_web::web::Payload;
 use actix_web::{post, web, HttpResponse, Result};
 use log::debug;
 use uuid::Uuid;
-use crate::errors::FileUploadError;
 
 #[post("/api/file/{id}/upload")]
 pub async fn post_upload_file(
@@ -13,7 +14,7 @@ pub async fn post_upload_file(
 ) -> Result<HttpResponse> {
     let Ok(id) = Uuid::try_from(id.to_string()) else {
         debug!("cant convert id to uuid: {}", id.to_string());
-        return Ok(HttpResponse::BadRequest().finish())
+        return Ok(invalid_parameter_response("id", "is not a valid UUID"))
     };
 
     match file_uploader.upload_file(id, payload).await {
@@ -23,10 +24,178 @@ pub async fn post_upload_file(
 }
 
 fn handle_post_upload_file_error(err: FileUploadError) -> HttpResponse {
-    match err {
-        FileUploadError::NotCompleted => HttpResponse::BadRequest().finish(),
-        FileUploadError::MaxFileSizeExceeded => HttpResponse::PayloadTooLarge().finish(),
-        FileUploadError::NotExists { .. } => HttpResponse::NotFound().finish(),
-        _ => HttpResponse::InternalServerError().finish()
+    let mut response_builder = match err {
+        FileUploadError::NotCompleted => HttpResponse::BadRequest(),
+        FileUploadError::MaxFileSizeExceeded => HttpResponse::PayloadTooLarge(),
+        FileUploadError::NotExists { .. } => HttpResponse::NotFound(),
+        _ => HttpResponse::InternalServerError()
+    };
+
+    response_builder.json(ErrorResponse::from(err))
+}
+
+fn invalid_parameter_response(parameter: &str, message: &str) -> HttpResponse {
+    let response_body = ErrorResponse {
+        code: "InvalidParameter".to_string(),
+        message: format!("The value of parameter {} is invalid: {}", parameter, message),
+    };
+
+    HttpResponse::BadRequest().json(ErrorResponse::from(response_body))
+}
+
+#[cfg(test)]
+mod tests {
+    use super::*;
+    use crate::database::tests::create_test_database_connection;
+    use crate::database::DbPool;
+    use crate::model::FileUpload;
+    use crate::schema::file_uploads;
+    use actix_web::http::{Method, StatusCode};
+    use actix_web::{http::header::ContentType, test, App};
+    use chrono::Utc;
+    use diesel::RunQueryDsl;
+
+    #[actix_web::test]
+    async fn test_post_file_200_ok() {
+        let pool = create_test_database_connection();
+        let app = test::init_service(
+            App::new()
+                .app_data(web::Data::new(FileUploader::unlimited(pool.clone())))
+                .service(post_upload_file)
+        ).await;
+
+        let id = register_test_file(pool.clone());
+        let file_content = std::fs::read("resources/hatsune_miku.jpg").unwrap();
+        let request = test::TestRequest::default()
+            .uri(format!("/api/file/{id}/upload").as_str())
+            .method(Method::POST)
+            .insert_header(ContentType::octet_stream())
+            .set_payload(file_content)
+            .to_request();
+        let response = test::call_service(&app, request).await;
+        assert_eq!(response.status(), StatusCode::OK);
     }
+
+    #[actix_web::test]
+    async fn test_post_file_400_bad_request_invalid_id() {
+        let pool = create_test_database_connection();
+        let app = test::init_service(
+            App::new()
+                .app_data(web::Data::new(FileUploader::unlimited(pool.clone())))
+                .service(post_upload_file)
+        ).await;
+
+        let id = "1"; // invalid uuid
+        let bytes = vec![1u8; 100];
+        let request = test::TestRequest::default()
+            .uri(format!("/api/file/{id}/upload").as_str())
+            .method(Method::POST)
+            .insert_header(ContentType::octet_stream())
+            .set_payload(bytes)
+            .to_request();
+        let response = test::call_service(&app, request).await;
+        let status_code = response.status().clone();
+        let response = test::read_body(response).await;
+        let response: ErrorResponse = serde_json::from_slice(&response).unwrap();
+
+        assert_eq!(status_code, StatusCode::BAD_REQUEST);
+        assert_eq!(response.code, "InvalidParameter".to_string());
+    }
+
+    #[actix_web::test]
+    async fn test_post_file_400_bad_request_incomplete_file() {
+        let pool = create_test_database_connection();
+        let app = test::init_service(
+            App::new()
+                .app_data(web::Data::new(FileUploader::unlimited(pool.clone())))
+                .service(post_upload_file)
+        ).await;
+
+        let id = register_test_file(pool.clone());
+        let bytes = vec![1u8; 100];
+        let request = test::TestRequest::default()
+            .uri(format!("/api/file/{id}/upload").as_str())
+            .method(Method::POST)
+            .insert_header(ContentType::octet_stream())
+            .set_payload(bytes)
+            .to_request();
+        let response = test::call_service(&app, request).await;
+        let status_code = response.status().clone();
+        let response = test::read_body(response).await;
+        let response: ErrorResponse = serde_json::from_slice(&response).unwrap();
+
+        assert_eq!(status_code, StatusCode::BAD_REQUEST);
+        assert_eq!(response.code, FileUploadError::NotCompleted.code());
+    }
+
+    #[actix_web::test]
+    async fn test_post_file_413_payload_too_large() {
+        let pool = create_test_database_connection();
+        let app = test::init_service(
+            App::new()
+                .app_data(web::Data::new(FileUploader::limited(pool.clone(), 200)))
+                .service(post_upload_file)
+        ).await;
+
+        let id = register_test_file(pool.clone());
+        let file_content = std::fs::read("resources/hatsune_miku.jpg").unwrap();
+        let request = test::TestRequest::default()
+            .uri(format!("/api/file/{id}/upload").as_str())
+            .method(Method::POST)
+            .insert_header(ContentType::octet_stream())
+            .set_payload(file_content)
+            .to_request();
+        let response = test::call_service(&app, request).await;
+        let status_code = response.status().clone();
+        let response = test::read_body(response).await;
+        let response: ErrorResponse = serde_json::from_slice(&response).unwrap();
+
+        assert_eq!(status_code, StatusCode::PAYLOAD_TOO_LARGE);
+        assert_eq!(response.code, FileUploadError::MaxFileSizeExceeded.code());
+    }
+
+    #[actix_web::test]
+    async fn test_post_file_404_not_found() {
+        let pool = create_test_database_connection();
+        let app = test::init_service(
+            App::new()
+                .app_data(web::Data::new(FileUploader::limited(pool.clone(), 200)))
+                .service(post_upload_file)
+        ).await;
+
+        let id = Uuid::new_v4();
+        let file_content = std::fs::read("resources/hatsune_miku.jpg").unwrap();
+        let request = test::TestRequest::default()
+            .uri(format!("/api/file/{id}/upload").as_str())
+            .method(Method::POST)
+            .insert_header(ContentType::octet_stream())
+            .set_payload(file_content)
+            .to_request();
+        let response = test::call_service(&app, request).await;
+        let status_code = response.status().clone();
+        let response = test::read_body(response).await;
+        let response: ErrorResponse = serde_json::from_slice(&response).unwrap();
+
+        assert_eq!(status_code, StatusCode::NOT_FOUND);
+        assert_eq!(response.code, FileUploadError::NotExists { id }.code());
+    }
+
+    fn register_test_file(pool: DbPool) -> Uuid {
+        let file_upload = FileUpload {
+            id: Uuid::new_v4(),
+            name: format!("hatsune_miku_{}.jpg", Utc::now().timestamp()),
+            mime_type: "image/jpeg".to_string(),
+            size: 200792,
+            uploaded_at: Utc::now().naive_utc()
+        };
+
+        let mut connection = pool.get().unwrap();
+        diesel::insert_into(file_uploads::table)
+            .values(&file_upload)
+            .execute(&mut connection)
+            .unwrap();
+
+        file_upload.id
+    }
+
 }
